--- a/contractApp.postman_collection.json
+++ b/contractApp.postman_collection.json
@@ -1,6 +1,6 @@
 {
 	"info": {
-		"_postman_id": "7d267413-4bd1-45d4-8efc-91d280927eeb",
+		"_postman_id": "86049803-b756-4af7-96a1-0766519bda00",
 		"name": "contractApp",
 		"schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json"
 	},
@@ -163,6 +163,54 @@
 							"path": [
 								"activate",
 								"612a6aac9e6e54eedd0b85f9"
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "edit",
+					"request": {
+						"method": "PATCH",
+						"header": [],
+						"body": {
+							"mode": "raw",
+							"raw": "{\r\n\"fristName\": \"waleed\"\r\n}",
+							"options": {
+								"raw": {
+									"language": "json"
+								}
+							}
+						},
+						"url": {
+							"raw": "http://localhost:3000/edit/612ae6e49e0b023699db7b5f",
+							"protocol": "http",
+							"host": [
+								"localhost"
+							],
+							"port": "3000",
+							"path": [
+								"edit",
+								"612ae6e49e0b023699db7b5f"
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "localhost:3000/delete/612ae6e49e0b023699db7b5f",
+					"request": {
+						"method": "DELETE",
+						"header": [],
+						"url": {
+							"raw": "localhost:3000/delete/612ae6e49e0b023699db7b5f",
+							"host": [
+								"localhost"
+							],
+							"port": "3000",
+							"path": [
+								"delete",
+								"612ae6e49e0b023699db7b5f"
 							]
 						}
 					},
