--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.2",
+    "multer": "^1.4.3",
     "nodemailer": "^6.6.3",
+    "qrcode": "^1.4.4",
     "validator": "^13.6.0"
   }
 }
